fixed issue on overflow on the x axis of the page

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -6,4 +6,5 @@
 
 body {
   background-color: $main-bg;
+  overflow-x: hidden;
 }
